--- a/Ghostbusters/Packages/com.arongranberg.astar/Drawing/PackageTools/Editor/PackageToolsEditor.asmdef
+++ b/Ghostbusters/Packages/com.arongranberg.astar/Drawing/PackageTools/Editor/PackageToolsEditor.asmdef
@@ -2,7 +2,8 @@
     "name": "DrawingPackageToolsEditor",
     "rootNamespace": "",
     "references": [
-        "GUID:f4059aaf6c60a4a58a177a2609feb769"
+        "GUID:f4059aaf6c60a4a58a177a2609feb769",
+        "Drawing"
     ],
     "includePlatforms": [
         "Editor"
