--- a/Ghostbusters/Packages/com.opsive.behaviordesigner/Editor/Managers/Opsive.BehaviorDesigner.Editor.Managers.asmdef
+++ b/Ghostbusters/Packages/com.opsive.behaviordesigner/Editor/Managers/Opsive.BehaviorDesigner.Editor.Managers.asmdef
@@ -7,7 +7,8 @@
         "GUID:bbb15c76beca87041af309d0035105a2",
         "GUID:27cb7fd045e5bb44f8c617ce69325b1d",
         "GUID:97a55b351d7460f4f87d2ad07066bf4e",
-        "GUID:cf0567158f87e3c4c9be32bb870ec7b9"
+        "GUID:cf0567158f87e3c4c9be32bb870ec7b9",
+        "Opsive.Shared.Runtime"
     ],
     "includePlatforms": [
         "Editor"
