--- a/Ghostbusters/Packages/com.opsive.behaviordesigner/Editor/NodeViews/Opsive.BehaviorDesigner.Editor.Controls.NodeViews.asmdef
+++ b/Ghostbusters/Packages/com.opsive.behaviordesigner/Editor/NodeViews/Opsive.BehaviorDesigner.Editor.Controls.NodeViews.asmdef
@@ -10,7 +10,8 @@
         "GUID:f9fbcd65fc33f6847b0f124cf7e891b6",
         "GUID:97a55b351d7460f4f87d2ad07066bf4e",
         "GUID:cf0567158f87e3c4c9be32bb870ec7b9",
-        "GUID:e9319bc8ab9315745bdf80aeffa01d6d"
+        "GUID:e9319bc8ab9315745bdf80aeffa01d6d",
+        "Opsive.Shared.Runtime"
     ],
     "includePlatforms": [
         "Editor"
